# uned_NumericalMethods

./: README.md  aux_functions.py  pyproject.toml
Task_1/: aux_functions.py  main_task1.py  task_1_functions.py
Task_2/: main_task2.py  task_2_functions.py
Task_3/: main_task3.py  main_task3_cartesian.py  task_3_functions.py
Task_4/: main_task4.py  task_4_functions.py
Task_5/: main_task5.py  task_5_functions.py
