[tool.poetry]
name = "uned-numericalmethods"
version = "0.1.0"
description = ""
authors = ["cmnarrillos <cmorenonarrillos@gmail.com>"]
readme = "README.md"
packages = [{include = "uned_numericalmethods"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

