[tool.poetry]
name = "uned-numericalmethods"
version = "0.1.0"
description = ""
authors = ["cmnarrillos <cmorenonarrillos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

